Werkende faders op dashboard

--- a/Components/Layout/MainLayout.razor
+++ b/Components/Layout/MainLayout.razor
@@ -48,11 +48,11 @@
                 <span class="text-xs">In/Out</span>
             </NavLink>
 
-            <NavLink href="@Routes.Dashboard"
+            <NavLink href="@Routes.Mix"
                      ActiveClass="text-primary"
                      class="flex flex-col items-center gap-1 px-4 py-2">
                 <i class="fas fa-square-sliders-vertical text-xl"></i>
-                <span class="text-xs">Dashboard</span>
+                <span class="text-xs">Mix</span>
             </NavLink>
 
             <NavLink href="@Routes.OscMonitor"
