--- a/Components/Routes.razor
+++ b/Components/Routes.razor
@@ -7,7 +7,7 @@
 
 @code {
     public const string InOut = "/in-out";
-    public const string Dashboard = "/dashboard";
+    public const string Mix = "/mix";
     public const string OscMonitor = "/osc-monitor";
     public const string Home = "/";
 }
