--- a/Components/Pages/Mix.razor
+++ b/Components/Pages/Mix.razor
@@ -54,13 +54,13 @@
                             </div>
                         </button>
                         <div class="text-[9px] text-gray-600">CH @ch.Index.ToString("D2")</div>
-                        <div class="text-[8px] text-gray-800 text-center px-1 leading-tight max-w-[40px] line-clamp-2 h-[20px] flex items-center justify-center">@ch.Name</div>
+                        <div class="text-[8px] text-gray-800 text-center px-1 leading-tight max-w-[40px] font-semibold line-clamp-2 h-[20px] flex items-center justify-center">@ch.Name</div>
                        <Fader Value="ch.Fader"
                               ValueChanged="(f) => OnFaderChanged(ch, f)" />
                         
-                        <div class="text-[10px] text-gray-700 mt-2 mb-1">@ch.Fader.ToString() db</div>
+                        <div class="text-[10px] text-gray-700 mt-2 mb-1">@ch.Fader.ToString()</div>
     
-                        <button class="w-full px-1 py-1.5 rounded transition-colors bg-gray-100 text-gray-600 hover:bg-gray-200">
+                        <button class="w-full px-1 py-1.5 rounded transition-colors bg-gray-200 text-gray-600 hover:bg-gray-300">
                                <i class="fad fa-volume-high"></i>
                         </button>
                     </article>
